<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/design_default_color_primary"
    tools:context=".ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/success_text"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_trophy"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/congratulationsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            tools:text="Congratulations, Name"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/your_score_is_text"
            android:textSize="26sp"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="20dp"
            tools:text="10/10"
            android:textSize="46sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_primary"
            android:background="@color/white"/>

        <Button
            android:id="@+id/finishButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish_text"
            android:textColor="@color/design_default_color_primary"
            android:backgroundTint="@color/white"/>

    </LinearLayout>

</ScrollView>